# Mini-IDE

./: CMakeLists.txt  Group.cpp  Group.h  Process.cpp  Process.h  RE.cpp  RE.h  README.md  State.cpp  configuratiebestand.ini  engine.cc  filelist.txt  htmlConverter.cpp  htmlConverter.h  input.txt
Automaten/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  RE.cpp  RE.h  State.h  Table.h
Automaten/DFAtoRE/: CMakeLists.txt  DFA.cpp  DFA.h  DFA.json  DFA1.json  ENFA.cpp  ENFA.h  RE.cpp  RE.h  main.cpp
Automaten/TFA/: DFA.cpp  DFA.h  Table.cpp
